# django-snacks

./: README.md  db.sqlite3  pyproject.toml
snacks/: tests.py  urls.py  views.py
snacks_project/: settings.py  urls.py
templates/: about.html  base.html  home.html
